# DT25-benchmark-framework

./: CMakeLists.txt  README.md  d_glob.h  d_win_install.bat  main.cpp  mainconfig.ini
OGL_objs/: VertexBufferLayout.cpp  VertexBufferLayout.h  d_ShaderProgram.cpp  d_ShaderProgram.h
d_Scenes/: d_SceneBase.cpp  d_SceneBase.h  d_SceneDPOIT.cpp  d_SceneDPOIT.h  d_SceneDefault.cpp  d_SceneDefault.h  d_SceneOverride.cpp  d_SceneOverride.h  d_SceneWBOIT.cpp  d_SceneWBOIT.h
engine_objs/: d_Camera.cpp  d_Camera.h  d_Heatmap.cpp  d_Heatmap.h  d_ImgExport.cpp  d_ImgExport.h  d_Logger.cpp  d_Logger.h  d_Mesh.cpp  d_Mesh.h  d_NURBS.cpp  d_NURBS.h  d_Object.cpp  d_Object.h  d_ObjectBase.cpp  d_ObjectBase.h  d_ParticleGenerator.cpp  d_ParticleGenerator.h  d_Stats.cpp  d_Stats.h  d_Texture.cpp  d_Texture.h  d_global_vals.cpp  d_global_vals.h  stb_image.cpp
resources/cmoudik/: cmoudik-C16.mtl  cmoudik-C3.mtl  cmoudik-C4.mtl  cmoudik-C8.mtl  cmoudik-C9.mtl  cmoudik.mtl  cmoudik.tga  cmoudik_fulla.tga
resources/floor/: floor.mtl
resources/offset_textures/: cmoudik.tiff
scene_configs/: 0.ini  1.ini  16.ini  17.ini  18.ini  2.ini  3.ini  4.ini  5.ini  6.ini
shaders/: cmoudik.frag  cmoudik.vert  d_WBOIT.frag  d_heatmap.frag  d_heatmap.vert  default.frag  default.vert
